--- a/integration/src/app/app.component.html
+++ b/integration/src/app/app.component.html
@@ -1,4 +1,7 @@
 <ng-select [(ngModel)]="selectedCity" [items]="cities" bindLabel="name" bindValue="id">
 </ng-select>
-
 <div id="ngModel">{{selectedCity}}</div>
+
+
+<ngx-custom-input>
+</ngx-custom-input>
